# picture_colorizer

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  access_control.py  cli.py  config.py  docres_check.py  image_pipeline.py  main.py  ocr_check.py  vlm_check.py
app/pipeline/: __init__.py  archive_document_4050.py
app/services/: __init__.py  document_restorer.py  local_vlm.py  ocr.py
tests/: generate_sample.py  test_modes.py
