[project]
name = "picture-colorizer"
version = "0.1.0"
description = "Local Telegram bot for softly colorizing black-and-white archival paper images."
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "python-dotenv>=1.0,<2",
    "opencv-python>=4.9,<5",
    "pillow>=10,<12",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=3,<4",
    "paddlepaddle>=3.3,<4",
]
docres = [
    "torch>=2.12,<3",
    "torchvision>=0.27,<1",
    "scikit-image>=0.26,<1",
    "einops>=0.8,<1",
    "tqdm>=4.67,<5",
]

[project.scripts]
picture-colorize = "app.cli:main"
picture-vlm-check = "app.vlm_check:main"
picture-ocr-check = "app.ocr_check:main"
picture-docres-check = "app.docres_check:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
